Use some Guava .net classes to clean up code a little
git-svn-id: http://myrrix-recommender.googlecode.com/svn/trunk@480 0d189622-dca1-7e23-9e30-e8815eb7bd2f