@@ -18,7 +18,7 @@ package net.myrrix.common;
 
 import java.util.List;
 
-import org.apache.mahout.common.Pair;
+import com.google.common.net.HostAndPort;
 import org.junit.Test;
 
 public final class PartitionsUtilsTest extends MyrrixTest {
@@ -26,31 +26,31 @@ public final class PartitionsUtilsTest extends MyrrixTest {
   @Test
   public void testParse() {
 
-    List<List<Pair<String,Integer>>> partitions =
+    List<List<HostAndPort>> partitions =
         PartitionsUtils.parseAllPartitions("foo:80,foo2:8080;bar:8080;baz2:80,baz3:80");
 
     assertEquals(3, partitions.size());
 
-    List<Pair<String,Integer>> partition0 = partitions.get(0);
-    List<Pair<String,Integer>> partition1 = partitions.get(1);
-    List<Pair<String,Integer>> partition2 = partitions.get(2);
+    List<HostAndPort> partition0 = partitions.get(0);
+    List<HostAndPort> partition1 = partitions.get(1);
+    List<HostAndPort> partition2 = partitions.get(2);
 
     assertEquals(2, partition0.size());
     assertEquals(1, partition1.size());
     assertEquals(2, partition2.size());
 
-    assertEquals("foo", partition0.get(0).getFirst());
-    assertEquals(80, (int) partition0.get(0).getSecond());
-    assertEquals("foo2", partition0.get(1).getFirst());
-    assertEquals(8080, (int) partition0.get(1).getSecond());
+    assertEquals("foo", partition0.get(0).getHostText());
+    assertEquals(80, partition0.get(0).getPort());
+    assertEquals("foo2", partition0.get(1).getHostText());
+    assertEquals(8080, partition0.get(1).getPort());
 
-    assertEquals("bar", partition1.get(0).getFirst());
-    assertEquals(8080, (int) partition1.get(0).getSecond());
+    assertEquals("bar", partition1.get(0).getHostText());
+    assertEquals(8080, partition1.get(0).getPort());
 
-    assertEquals("baz2", partition2.get(0).getFirst());
-    assertEquals(80, (int) partition2.get(0).getSecond());
-    assertEquals("baz3", partition2.get(1).getFirst());
-    assertEquals(80, (int) partition2.get(1).getSecond());
+    assertEquals("baz2", partition2.get(0).getHostText());
+    assertEquals(80, partition2.get(0).getPort());
+    assertEquals("baz3", partition2.get(1).getHostText());
+    assertEquals(80, partition2.get(1).getPort());
   }
 
 }
